--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             android:textSize="24sp"
             android:gravity="bottom|left"
             android:padding="16dp"
-            android:background="@color/teal_700"
+            android:background="@color/basicRed"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
