--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
     <TextView
+            android:id="@+id/main_txtCapt"
             android:layout_width="match_parent"
             android:layout_height="96dp"
             android:text="@string/main_appCapt"
@@ -18,6 +19,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:src="@drawable/main_logo"
+            android:layout_margin="32dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintTop_toBottomOf="@+id/main_txtCapt"
+            app:layout_constraintBottom_toTopOf="@+id/main_btnAdd"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
     <Button
             android:id="@+id/main_btnSettings"
             android:layout_width="match_parent"
