--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="basicRed">#FFBB0000</color>
     <color name="darkRed">#FF990000</color>
     <color name="basicGray">#FF222222</color>
+    <color name="lightGray">#FFAAAAAA</color>
 </resources>
