--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,6 +59,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
             android:text="@string/main_btnAddlist"
+            android:onClick="main_addClick"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toTopOf="@id/main_btnLoad"/>
