--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="darkRed">#FF990000</color>
     <color name="basicGray">#FF222222</color>
     <color name="lightGray">#FFAAAAAA</color>
+    <color name="transparent">#00000000</color>
 </resources>
