--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -79,28 +79,29 @@
                 android:id="@+id/addList_item0"
                 android:hint="@string/addList_itemHint"
                 android:layout_marginLeft="8dp"
+                android:layout_columnWeight="9"
                 android:layout_marginRight="8dp"
                 android:inputType="text"
                 android:textColorHint="@color/lightGray"
                 android:textColor="@color/black"
-                android:backgroundTint="@color/black"
-                android:layout_columnWeight="5"/>
+                android:backgroundTint="@color/black"/>
             <ImageButton
                 android:id="@+id/addList_btnDel0"
                 android:src="@drawable/app_trashbin"
                 android:layout_gravity="center"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
+                android:layout_columnWeight="1"
                 android:scaleX="0.75"
                 android:scaleY="0.75"
                 android:background="@null"
-                android:tint="@drawable/btn_shad"
-                android:layout_columnWeight="2"/>
+                android:tint="@drawable/btn_shad"/>
             <Button
                 android:id="@+id/addList_addItem"
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/addList_addItem"
+                android:onClick="addList_addItem"
                 android:layout_columnSpan="2"/>
         </GridLayout>
     </ScrollView>
